--- a/embeddings/Word2Vec.ipynb
+++ b/embeddings/Word2Vec.ipynb
@@ -6,7 +6,7 @@
       "name": "Word2Vec.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO1R4rlXVDmdP7mkAkui1C6",
+      "authorship_tag": "ABX9TyMVXm8aArHuml72i7xFT2F6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,8 @@
         "- Skip-gram model\n",
         "\n",
         "Continuous Bag-of-Words (CBOW) model learns the focus word given the neighboring words whereas the Skip-gram model learns the neighboring words given the focus word. \n",
+        "\n",
+        "![word2vec](https://drive.google.com/uc?id=1oqfxoxUK5HT6QEE6nUlr7tUICbptfWeC)\n",
         "\n",
         "There are a lot of online material available to explain the concept about Word Embeddings. I can't explain any better than that. So my focus here will be on, how to use pre-trained word embeddings. I will provide relevant resources to look into more details."
       ]
@@ -147,7 +149,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
