arch diag added

--- a/applications/classification/Sentiment Analysis with Attention.ipynb
+++ b/applications/classification/Sentiment Analysis with Attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Sentiment Analysis with Attention.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOd/o00fJx7s3uva02oHuNA",
+      "authorship_tag": "ABX9TyPKYarqjk4eKDlhEjcmJAia",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,20 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/graviraja/100-Days-of-NLP/blob/applications%2Fsentiment/applications/classification/Sentiment%20Analysis%20with%20Attention.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yt6UxaKsVF7q",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Sentiment Analysis with Attention\n",
+        "\n",
+        "Attention is generally used for Machine Translation and related tasks having a Encoder - Decoder architecture. Ideally we will use the final hidden state and use it to predict the sentiment of the sentence. How can attention be used in predicting the sentiment of a statement? What hidden state will be used for calculating attention? With a small tweak, attention can be used in predicting sentiment by using the final hidden state and encoder outputs. The architecture looks like this:\n",
+        "\n",
+        "![](https://drive.google.com/uc?id=1ll7dJJ_s9w91koLOoyTmDvm_G41R2zBI)\n"
       ]
     },
     {
