--- a/applications/classification/ner_tagging/NER tagging with Spacy.ipynb
+++ b/applications/classification/ner_tagging/NER tagging with Spacy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NER tagging with Spacy.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpqV0TH96482FTANjL61IF",
+      "authorship_tag": "ABX9TyOf2QvRRRI7pLsI/bxGGMYV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -440,7 +440,13 @@
         "colab_type": "text"
       },
       "source": [
-        "Let's create 2 new entities called **`ACTIVITY`** and **`SERVICE`** in a specific domain data (bank)"
+        "Let's create 2 new entities called **`ACTIVITY`** and **`SERVICE`** in a specific domain data (bank).\n",
+        "\n",
+        "There are many tools available for creating data for training the NER model. Few of them are:\n",
+        "\n",
+        "- [prodigy](https://prodi.gy/)\n",
+        "- [doccano](https://github.com/doccano/doccano)\n",
+        "- [inception](https://inception-project.github.io/)"
       ]
     },
     {
